ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: main-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: "letsencrypt-staging"
spec:
  tls:
  - hosts:
    - ujinslav.ru
    secretName: app-tls
  rules:
   - host: ujinslav.ru
     http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: reactapp-service
                port: 
                  number: 80
